--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,19 @@
+name = "IOM_Collector"
+uuid = "bdf42eb1-85ec-4052-9919-edfefbcacadc"
+authors = ["Connor Smith"]
+version = "1.0.0-DEV"
+
+[compat]
+julia = "1"
+
+[extras]
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[targets]
+test = ["Test"]
+
 [deps]
 Conda = "8f4d0f93-b110-5947-807f-2305c1781a2d"
+PkgTemplates = "14b8a8f1-9102-5b29-a752-f990bacb7fe1"
 PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 WritePostgres = "59f707cc-cce7-40fd-9617-9e0c6ce07bf2"
