--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,13 @@ uuid = "bdf42eb1-85ec-4052-9919-edfefbcacadc"
 authors = ["Connor Smith"]
 version = "1.0.0-DEV"
 
+[deps]
+Conda = "8f4d0f93-b110-5947-807f-2305c1781a2d"
+Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
+PkgTemplates = "14b8a8f1-9102-5b29-a752-f990bacb7fe1"
+PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
+WritePostgres = "59f707cc-cce7-40fd-9617-9e0c6ce07bf2"
+
 [compat]
 julia = "1"
 
@@ -11,9 +18,3 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
 test = ["Test"]
-
-[deps]
-Conda = "8f4d0f93-b110-5947-807f-2305c1781a2d"
-PkgTemplates = "14b8a8f1-9102-5b29-a752-f990bacb7fe1"
-PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
-WritePostgres = "59f707cc-cce7-40fd-9617-9e0c6ce07bf2"
