--- a/Project.toml
+++ b/Project.toml
@@ -6,9 +6,11 @@ version = "1.0.0-DEV"
 [deps]
 Conda = "8f4d0f93-b110-5947-807f-2305c1781a2d"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
+HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
+IOM_WritePostgres = "59f707cc-cce7-40fd-9617-9e0c6ce07bf2"
+JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 PkgTemplates = "14b8a8f1-9102-5b29-a752-f990bacb7fe1"
 PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
-IOM_WritePostgres = "59f707cc-cce7-40fd-9617-9e0c6ce07bf2"
 
 [compat]
 julia = "1"
